feat(command): add support for server commands

--- a/example-plugin/src/main/resources/plugin.yml
+++ b/example-plugin/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: FubukiExample
 main: moe.skjsjhb.mc.fubuki.example.plugin.ExamplePlugin
 version: 1.0
 api-version: 1.21
+
+commands:
+  fubuki:
+    aliases: fb
